# EmpiricalQuantileFun

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  test2d.cpp
demos/: test1d_nonuniform.cpp  test1d_uniform.cpp  test2d_nonuniform.cpp  test2d_uniform.cpp  test3d_nonuniform.cpp  test3d_uniform.cpp  testNd_nonuniform.cpp  testNd_uniform.cpp  testNd_uniform_mfsa.cpp  test_optimal_transport_nonuniform.cpp  test_optimal_transport_uniform.cpp
maps/: sample.p
mveqf/: cstvect.h  experimental.h  explicit.h  implicit.h  implicit_mfsa.h  implicit_trie.h  kde.h  kquantile.h  mfsa.h  mveqf.h  mvff.h  quantile.h  sample.h  sdot.h  trie.h  trie_based.h  trie_node.h
src/: cstvect.h  data_io.h  experimental.h  explicit.h  implicit.h  kde.cpp  kde.h  kquantile.h  main.cpp  mveqf.h  mvff.h  print2file.h  quantile.h  sdot.h  test.cpp  test.h  test1d.cpp  test1d.h  test2d.cpp  test2d.h  test3d.cpp  test3d.h  testNd.cpp  testNd.h  test_kde.h  timer.cpp  timer.h  trie.h  trie_based.h  trie_node.h
src/test/: kde.cpp  run_test.h  test.cpp  test.h  test1d.cpp  test1d.h  test2d.cpp  test2d.h  test3d.cpp  test3d.h  testNd.cpp  testNd.h  test_kde.h
src/utility/: data_io.h  timer.cpp  timer.h
